--- a/src/sass/components/_hero-slider.scss
+++ b/src/sass/components/_hero-slider.scss
@@ -4,7 +4,8 @@
   overflow: hidden;
   position: relative;
   margin-bottom: 50px;
-  margin-top: calc(#{$header-height} * -1);
+  // margin-top: calc(#{$header-height} * -1);
+  margin-top: -90px;
 
   @include table {
     margin-top: calc(#{$header-tablet-height} * -1);
