--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,3 +9,6 @@
 @import "./components/policy-card";
 @import "./components/section";
 @import "./components/product-card";
+@import "./components/catalog";
+@import "./components/custom-checkbox";
+@import "./components/product";
