Custom Alert and Add Dark Mode

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -21,6 +21,8 @@ html {
 
 body {
   font-family: "Roboto", sans-serif;
+  background-color: var(--main-bg);
+  color: var(--main-color);
 }
 
 ul {
