--- a/src/sass/components/_product-card.scss
+++ b/src/sass/components/_product-card.scss
@@ -42,7 +42,7 @@
 
   &_name {
     margin-bottom: 10px;
-    color: $txt-second-color;
+    color: var(--txt-second-color);
     font-size: 1.25rem;
     font-weight: normal;
   }
