--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,7 @@
 $main-bg: #fff;
 $main-color: #4267b2;
+// $main-bg: #000 !important;
+// $main-color: #fff !important;
 
 $txt-main-color: #000;
 $txt-second-color: #8d8d8d;
@@ -24,6 +26,11 @@ $colors: (
   "red": #ff0000,
   "main": $main-color,
 );
+
+.dark {
+  $main-bg: #000 !important;
+  $main-color: #fff !important;
+}
 
 $mobile-width: 600px;
 $table-width: 1024px;
