--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -20,9 +20,20 @@ html {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif !important;
   background-color: var(--main-bg);
   color: var(--main-color);
+  // background: #e96443; /* fallback for old browsers */
+  // background: -webkit-linear-gradient(
+  //   to right,
+  //   #904e95,
+  //   #e96443
+  // ); /* Chrome 10-25, Safari 5.1-6 */
+  // background: linear-gradient(
+  //   to right,
+  //   #904e95,
+  //   #e96443
+  // ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 ul {
