--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,3 +13,4 @@
 @import "./components/custom-checkbox";
 @import "./components/product";
 @import "./components/social-sidebar";
+@import "./components/silde-banner";
