--- a/src/sass/components/_product-card.scss
+++ b/src/sass/components/_product-card.scss
@@ -138,7 +138,7 @@
 
 .container-product-card .imgBox .size {
   @include flex(center, center);
-  margin-top: 10px;
+  // margin-top: 10px;
 
   @include mobile {
     margin-top: 5px;
