--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -13,6 +13,7 @@
 
 html {
   font-size: 13px;
+  scroll-behavior: smooth;
 
   @include mobile {
     font-size: 11px;
@@ -88,15 +89,15 @@ a:hover {
 .container {
   width: 100%;
   max-width: 1620px;
-  padding: 0 50px;
+  padding: 0 60px 0 50px;
   margin: auto;
 
   @include table {
-    padding: 0 20px;
+    padding: 0 30px 0 20px;
   }
 
   @include mobile {
-    padding: 0 10px;
+    padding: 0 20px 0 10px;
   }
 }
 
@@ -116,4 +117,65 @@ a:hover {
 
 .grid {
   display: grid;
+}
+
+//? Custom progress-bar
+::-webkit-scrollbar {
+  display: none;
+  // opacity: 1;
+  // width: 10px;
+  // background: blue;
+  // pointer-events: none;
+}
+
+#scrollPath {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 10px;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.05);
+  z-index: 999;
+}
+
+#progressbar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 10px;
+  background: linear-gradient(to top, #008aff, #00ffe7);
+  z-index: 999;
+  animation: animate 5s linear infinite;
+}
+
+@keyframes animate {
+  0%,
+  100% {
+    filter: hue-rotate(0deg);
+  }
+  50% {
+    filter: hue-rotate(360deg);
+  }
+}
+
+#progressbar::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, #008aff, #00ffe7);
+  filter: blur(10px);
+}
+
+#progressbar::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, #008aff, #00ffe7);
+  filter: blur(30px);
 }
