--- a/src/sass/components/_social-sidebar.scss
+++ b/src/sass/components/_social-sidebar.scss
@@ -1,12 +1,12 @@
 nav {
   position: fixed;
-  width: 70px;
-  margin-top: 150px;
+  width: 50px;
+  top: 25%;
   box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, 0.4);
   z-index: 9;
 
   @include table {
-    width: 60px;
+    width: 45px;
   }
 
   ul {
@@ -39,11 +39,12 @@ nav {
         padding-left: 25%;
         border-bottom: 1px solid rgba(0, 0, 0, 0.4);
         transition: all 0.3s linear;
+        @include flex(center, center);
 
         i {
           position: absolute;
           top: 17px;
-          left: 20px;
+          left: 13px;
           font-size: 20px;
         }
 
