--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -48,4 +48,16 @@
   &-animate:hover &_icon {
     transform: translateX(0);
   }
+
+  &-sm{
+    font-size: 1rem;
+  }
+
+  &-sm &_txt{
+    padding: 0.7rem 1.5rem;
+  }
+
+  &-block{
+    width: 100%;
+  }
 }
