--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -14,3 +14,5 @@
 @import "./components/product";
 @import "./components/social-sidebar";
 @import "./components/silde-banner";
+@import "./components/product-view-model";
+@import "./components/cart";
