Add Images And Fix Something

--- a/src/sass/components/_product-view-model.scss
+++ b/src/sass/components/_product-view-model.scss
@@ -40,6 +40,10 @@
     .img-zoom-container{
       pointer-events: none;
     }
+
+    .product_info{
+      position: relative;
+    }
   }
 
   &.active &_content{
