--- a/src/sass/components/_login.scss
+++ b/src/sass/components/_login.scss
@@ -1,388 +1,530 @@
-// .box {
-//     position: relative;
-//     top: 0;
-//     opacity: 1;
-//     float: left;
-//     padding: 60px 50px 40px 50px;
-//     width: 100%;
-//     background: #fff;
-//     border-radius: 10px;
-//     transform: scale(1);
-//     -webkit-transform: scale(1);
-//     -ms-transform: scale(1);
-//     z-index: 5;
-  
-    
-  
-    
-//   }
-  
-  
-  
-  
-//   .title {
-//     width: 100%;
-//     float: left;
-//     line-height: 46px;
-//     font-size: 34px;
-//     font-weight: 700;
-//     letter-spacing: 2px;
-//     color: #ED2553;
-//     position: relative;
-  
-    
-//   }
-  
-  
-  
-  
-  
-  
-  
-//   .input {
-//     width: 100%;
-//     float: left;
-  
-//     label, input, .spin {
-//       width: 100%;
-//       float: left;
-//     }
-//   }
-  
-//   .button {
-//     width: 100%;
-//     float: left;
-  
-//     button {
-//       width: 100%;
-//       float: left;
-//     }
-//   }
-  
-//   .input, .button {
-//     margin-top: 30px;
-//     height: 70px;
-//   }
-  
-//   .input {
-//     position: relative;
-  
-//     input {
-//       position: relative;
-//     }
-//   }
-  
-//   .button {
-//     position: relative;
-  
-//     button {
-//       position: relative;
-//     }
-//   }
-  
-//   .input {
-//     input {
-//       height: 60px;
-//       top: 10px;
-//       border: none;
-//       background: transparent;
-//       font-family: 'Roboto', sans-serif;
-//       font-size: 24px;
-//       color: rgba(0, 0, 0, 0.8);
-//       font-weight: 300;
-//     }
-  
-//     label {
-//       font-family: 'Roboto', sans-serif;
-//       font-size: 24px;
-//       color: rgba(0, 0, 0, 0.8);
-//       font-weight: 300;
-//     }
-//   }
-  
-//   .button button {
-//     font-family: 'Roboto', sans-serif;
-//     font-size: 24px;
-//     color: rgba(0, 0, 0, 0.8);
-//     font-weight: 300;
-//   }
-  
-//   .input {
-//     &:before, .spin {
-//       width: 100%;
-//       height: 1px;
-//       position: absolute;
-//       bottom: 0;
-//       left: 0;
-//     }
-  
-//     &:before {
-//       content: "";
-//       background: rgba(0, 0, 0, 0.1);
-//       z-index: 3;
-//     }
-  
-//     .spin {
-//       background: #ED2553;
-//       z-index: 4;
-//       width: 0;
-//     }
-//   }
-  
-//   .overbox .input {
-//     .spin {
-//       background: rgba(255, 255, 255, 1);
-//     }
-  
-//     &:before {
-//       background: rgba(255, 255, 255, 0.5);
-//     }
-//   }
-  
-//   .input label {
-//     position: absolute;
-//     top: 10px;
-//     left: 0;
-//     z-index: 2;
-//     cursor: pointer;
-//     line-height: 60px;
-//   }
-  
-//   .button {
-//     &.login {
-//       width: 60%;
-//       left: 20%;
-  
-//       button {
-//         width: 100%;
-//         line-height: 64px;
-//         left: 0%;
-//         background-color: transparent;
-//         border: 3px solid rgba(0, 0, 0, 0.1);
-//         font-weight: 900;
-//         font-size: 18px;
-//         color: rgba(0, 0, 0, 0.2);
-//       }
-//     }
-  
-//     button {
-//       width: 100%;
-//       line-height: 64px;
-//       left: 0%;
-//       background-color: transparent;
-//       border: 3px solid rgba(0, 0, 0, 0.1);
-//       font-weight: 900;
-//       font-size: 18px;
-//       color: rgba(0, 0, 0, 0.2);
-//     }
-  
-//     &.login {
-//       margin-top: 30px;
-//     }
-  
-//     margin-top: 20px;
-  
-//     button {
-//       background-color: #fff;
-//       color: #ED2553;
-//       border: none;
-//     }
-  
-//     &.login button {
-//       &.active {
-//         border: 3px solid transparent;
-//         color: #fff !important;
-  
-//         span {
-//           opacity: 0;
-//           transform: scale(0);
-//           -webkit-transform: scale(0);
-//           -ms-transform: scale(0);
-//         }
-  
-//         i.fa {
-//           opacity: 1;
-//           transform: scale(1) rotate(-0deg);
-//           -webkit-transform: scale(1) rotate(-0deg);
-//           -ms-transform: scale(1) rotate(-0deg);
-//         }
-//       }
-  
-//       i.fa {
-//         width: 100%;
-//         height: 100%;
-//         position: absolute;
-//         top: 0;
-//         left: 0;
-//         line-height: 60px;
-//         transform: scale(0) rotate(-45deg);
-//         -webkit-transform: scale(0) rotate(-45deg);
-//         -ms-transform: scale(0) rotate(-45deg);
-//       }
-  
-//       &:hover {
-//         color: #ED2553;
-//         border-color: #ED2553;
-//       }
-//     }
-  
-//     margin: 40px 0;
-//     overflow: hidden;
-//     z-index: 2;
-  
-//     button {
-//       cursor: pointer;
-//       position: relative;
-//       z-index: 2;
-//     }
-//   }
-  
-//   .pass-forgot {
-//     width: 100%;
-//     float: left;
-//     text-align: center;
-//     color: rgba(0, 0, 0, 0.4);
-//     font-size: 18px;
-//   }
-  
-//   .click-efect {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     background: #ED2553;
-//     border-radius: 50%;
-//   }
-  
-//   .overbox {
-//     width: 100%;
-//     height: 100%;
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     overflow: inherit;
-//     border-radius: 10px;
-//     padding: 60px 50px 40px 50px;
-  
-//     .title, .button, .input {
-//       z-index: 111;
-//       position: relative;
-//       color: #fff !important;
-//       display: none;
-//     }
-  
-//     .title {
-//       width: 80%;
-//     }
-  
-//     .input {
-//       margin-top: 20px;
-  
-//       input, label {
-//         color: #fff;
-//       }
-//     }
-  
-//     .material-button, .alt-2 {
-//       display: block;
-  
-//       .shape {
-//         display: block;
-//       }
-//     }
-//   }
-  
-//   .material-button, .alt-2 {
-//     width: 140px;
-//     height: 140px;
-//     border-radius: 50%;
-//     background: #ED2553;
-//     position: absolute;
-//     top: 40px;
-//     right: -70px;
-//     cursor: pointer;
-//     z-index: 100;
-//     transform: translate(0%, 0%);
-//     -webkit-transform: translate(0%, 0%);
-//     -ms-transform: translate(0%, 0%);
-//   }
-  
-//   .material-button .shape, .alt-2 .shape {
-//     position: absolute;
-//     top: 0;
-//     right: 0;
-//     width: 100%;
-//     height: 100%;
-//   }
-  
-//   .material-button .shape:before, .alt-2 .shape:before, .material-button .shape:after, .alt-2 .shape:after {
-//     content: "";
-//     background: #fff;
-//     position: absolute;
-//     top: 50%;
-//     left: 50%;
-//     transform: translate(-50%, -50%) rotate(360deg);
-//     -webkit-transform: translate(-50%, -50%) rotate(360deg);
-//     -ms-transform: translate(-50%, -50%) rotate(360deg);
-//   }
-  
-//   .material-button .shape:before, .alt-2 .shape:before {
-//     width: 25px;
-//     height: 4px;
-//   }
-  
-//   .material-button .shape:after, .alt-2 .shape:after {
-//     height: 25px;
-//     width: 4px;
-//   }
-  
-//   .material-button.active, .alt-2.active {
-//     top: 50%;
-//     right: 50%;
-//     transform: translate(50%, -50%) rotate(0deg);
-//     -webkit-transform: translate(50%, -50%) rotate(0deg);
-//     -ms-transform: translate(50%, -50%) rotate(0deg);
-//   }
-  
-//   body {
-//     background-image: url(https://lh4.googleusercontent.com/-XplyTa1Za-I/VMSgIyAYkHI/AAAAAAAADxM/oL-rD6VP4ts/w1184-h666/Android-Lollipop-wallpapers-Google-Now-Wallpaper-2.png);
-//     background-position: center;
-//     background-size: cover;
-//     background-repeat: no-repeat;
-//     min-height: 100vh;
-//     font-family: 'Roboto', sans-serif;
-//   }
-  
-  
-  
-//   .materialContainer {
-//     width: 100%;
-//     max-width: 460px;
-//     position: absolute;
-//     top: 50%;
-//     left: 50%;
-//     transform: translate(-50%, -50%);
-//     -webkit-transform: translate(-50%, -50%);
-//     -ms-transform: translate(-50%, -50%);
-//   }
-  
-//   * {
-//     -webkit-box-sizing: border-box;
-//     -moz-box-sizing: border-box;
-//     box-sizing: border-box;
-//     margin: 0;
-//     padding: 0;
-//     text-decoration: none;
-//     list-style-type: none;
-//     outline: none;
-  
-//     &:after, &::before {
-//       -webkit-box-sizing: border-box;
-//       -moz-box-sizing: border-box;
-//       box-sizing: border-box;
-//       margin: 0;
-//       padding: 0;
-//       text-decoration: none;
-//       list-style-type: none;
-//       outline: none;
-//     }
-//   }
+/* reset */
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
+article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
+ol,ul{list-style:none;margin:0px;padding:0px;}
+blockquote,q{quotes:none;}
+blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}
+table{border-collapse:collapse;border-spacing:0;}
+/* start editing from here */
+a{text-decoration:none;}
+.txt-rt{text-align:right;}/* text align right */
+.txt-lt{text-align:left;}/* text align left */
+.txt-center{text-align:center;}/* text align center */
+.float-rt{float:right;}/* float right */
+.float-lt{float:left;}/* float left */
+.clear{clear:both;}/* clear float */
+.pos-relative{position:relative;}/* Position Relative */
+.pos-absolute{position:absolute;}/* Position Absolute */
+.vertical-base{	vertical-align:baseline;}/* vertical align baseline */
+.vertical-top{	vertical-align:top;}/* vertical align top */
+nav.vertical ul li{	display:block;}/* vertical menu */
+nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
+img{max-width:100%;}
+/*end reset*/
+body{
+	font-family: 'Montserrat', sans-serif;
+	margin:0;
+	background: url(https://images.unsplash.com/photo-1529539795054-3c162aab037a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bG9naW58ZW58MHx8MHx8&w=1000&q=80) no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -ms-background-size: cover;
+    background-attachment: fixed;
+	background-position: center;
+}
+body a{
+	transition: 0.5s all;
+	-webkit-transition: 0.5s all;
+	-o-transition: 0.5s all;
+	-moz-transition: 0.5s all;
+	-ms-transition: 0.5s all;
+}
+ ul{
+	padding: 0;
+	margin: 0;
+}
+h1,h2,h3,h4,h5,h6{
+	margin:0;
+	padding:0;
+}
+p{
+	padding: 0;
+	margin: 0;
+	color:#999;
+}
+/*-- main --*/
+.main {
+    position: relative;
+	text-align: center;
+}
+.main-w3l {
+    position: absolute;
+    // top: 5%;
+	width: 60%;
+    margin: 0 auto;
+	left: 19%;
+}
+h1.logo-w3  {
+    font-size: 3em;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    color: #ffffff;
+	text-align:center;
+	margin: 0;
+	width: 100%;
+}
+.w3layouts-main h2 {
+	color: #fff;
+    font-size: 29px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+	text-align: center;
+}
+.w3layouts-main h2 span {
+    padding: 0 1em;
+}
+.w3layouts-main{
+    width: 40%;
+    margin: 0 auto;
+    background:rgba(0, 0, 0, 0.53);
+	text-align: center;
+}
+.w3layouts-main{
+	padding: 42px 35px 25px;
+}
+input[type="text"], input[type="email"], input[type="password"] {
+    width: 75%;
+    padding: 16px 50px 16px 50px;
+    outline: none;
+    font-size: 15px;
+    font-weight: 300;
+    color: #fff;
+    margin: 14px 0px;
+	font-family: 'Montserrat', sans-serif;
+    border: 1px solid #fff;
+    background: transparent;
+    letter-spacing: 1px;
+    border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-ms-border-radius:5px;
+	-o-border-radius: 5px;
+}
+// input[type="email"] {
+//     background:  rgba(0, 0, 0, 0.55) url(../images/user.png) no-repeat 10px 10px;
+// }
+// input[type="password"] {
+//     background:  rgba(0, 0, 0, 0.55) url(../images/lock.png) no-repeat 10px 10px;
+// }
+.w3layouts-main h6 {
+    font-size: 16px;
+	color: #fff;
+    letter-spacing: 1px;
+	margin-top: 8px;
+	text-align: center;
+	text-decoration:none;
+}
+.w3layouts-main h3 {
+    font-size: 0.9em;
+    color: #fff;
+    margin-top: 3em;
+	text-align: center;
+}
+.w3layouts-main a {
+    color: #fff;
+	transition:0.5s all;
+	-webkit-transition:0.5s all;
+	-o-transition:0.5s all;
+	-moz-transition:0.5s all;
+	-ms-transition:0.5s all;
+}
+input[type="submit"] {
+    padding: 14px 30px;
+    font-size: 1em;
+    border-radius: 30px;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	-ms-border-radius:30px;
+	-o-border-radius: 30px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    background: #2dde98;
+    color: #ffffff;
+    border: none;
+    outline: none;
+    cursor: pointer;
+	font-family: 'Montserrat', sans-serif;
+    margin: 24px auto;
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -ms-transition: 0.5s all;
+}
+input[type="submit"]:hover {
+    background: #ff4f81;
+    color: #fff;
+	transition:0.5s all;
+	-webkit-transition:0.5s all;
+	-o-transition:0.5s all;
+	-moz-transition:0.5s all;
+	-ms-transition:0.5s all;
+}
+.w3layouts-main2 input[type="submit"] {
+    margin: 27px auto 31px;
+}
+.social a {
+    display: flex;
+    background: #3b5998;
+    padding: 1em 4.68em;
+    font-size: 16px;
+    letter-spacing: 2px;
+    color: #fff;
+    text-transform: uppercase;
+    border-radius: 30px;
+    border-radius: 30px;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	-ms-border-radius:30px;
+	-o-border-radius: 30px;
+}
+.social a:hover {
+    background: #2dde98;
+    color: #fff;
+}
+/*--placeholder-color--*/
+
+::-webkit-input-placeholder{
+	color:rgba(255, 255, 255, 0.65);
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   color: rgba(255, 255, 255, 0.65); 
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   color: rgba(255, 255, 255, 0.65);  
+}
+
+:-ms-input-placeholder {  
+   color: rgba(255, 255, 255, 0.65);  
+}
+/*--//placeholder-color--*/
+/*-- //main --*/
+
+/*--footer--*/
+.footer-w3l p {
+    margin: 3.5em 0em 0em;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+.footer-w3l a {
+    color:#2dde98;
+	font-family: 'Montserrat', sans-serif;
+}
+.footer-w3l a:hover {
+    color:#fff;
+    text-decoration: underline;
+}
+/*--//footer--*/
+
+/*--responsive--*/
+
+@media(max-width: 1920px){
+	// h1.logo-w3 {
+	// 	margin: 10% 0 5%;
+	// }
+	.social a {
+		padding: 1em 6.68em;
+	}
+}
+@media(max-width: 1680px){
+	// h1.logo-w3 {
+	// 	margin: 7% 0 5%;
+	// }
+	.social a {
+		padding: 1em 5.38em;
+	}
+}
+@media(max-width: 1600px){
+	// h1.logo-w3 {
+	// 	margin: 5% 0;
+	// }
+	.social a {
+		padding: 1em 4.68em;
+	}
+}
+@media(max-width: 1440px){
+	.w3layouts-main {
+		padding: 40px 40px;
+	}
+	.w3layouts-main {
+		width: 57%;
+	}
+	h1.logo-w3 {
+		font-size: 2.8em;
+	}
+}
+@media(max-width: 1366px){
+	.main-w3l {
+		width: 68%;
+		left: 17%;
+	}
+	h1.logo-w3 {
+		font-size: 2.7em;
+	}
+	.footer-w3l p {
+		margin: 3em 0em 2em;
+	}
+}
+@media(max-width: 1280px){
+	h1.logo-w3 {
+		font-size: 2.8em;
+	}
+	.main-w3l {
+		width: 71%;
+		left: 15%;
+	}
+	.footer-w3l p {
+		margin: 4.5em 0em 0em;
+	}
+}
+@media(max-width: 1080px){
+	h1.logo-w3 {
+		font-size: 2.7em;
+		letter-spacing: 3px;
+	}
+	.w3layouts-main h2, .w3layouts-main2 h3 {
+		font-size: 27px;
+	}
+	.w3layouts-main {
+		width: 50%;
+	}
+}
+@media(max-width: 1050px){
+	.w3layouts-main {
+		width: 48%;
+	}
+	.social a {
+		padding: 1em 3.8em;
+	}
+}
+@media(max-width: 1024px){
+	h1.logo-w3 {
+		font-size: 2.6em;
+	}
+	.w3layouts-main h2, .w3layouts-main2 h3 {
+		font-size: 26px;
+	}
+	.social a {
+		padding: 1em 3.5em;
+	}
+	.w3layouts-main {
+		width: 53%;
+	}
+	.footer-w3l p {
+		margin: 2em 0em;
+	}
+}
+@media(max-width: 991px){
+	h1.logo-w3 {
+		font-size: 2.5em;
+		margin: 4% 0;
+	}
+	.w3layouts-main h2, .w3layouts-main2 h3 {
+		font-size: 25px;
+	}
+	.social a {
+		padding: 1em 4.5em;
+		font-size: 15px;
+	}
+	input[type="submit"] {
+		padding: 14px 30px;
+		font-size: .875em;
+	}
+}
+@media(max-width: 900px){
+	.w3layouts-main {
+		width: 57%;
+	}	
+	input[type="text"], input[type="email"], input[type="password"] {
+		width: 73%;
+	}
+}
+@media(max-width: 800px){
+	.main-w3l {
+		width: 91%;
+		left: 4.5%;
+	}
+	h1.logo-w3 {
+		font-size: 2.4em;
+		letter-spacing: 2px;
+	}
+	.w3layouts-main {
+		width: 53%;
+	}
+}
+@media(max-width: 768px){
+}
+@media(max-width: 736px){
+	h1.logo-w3 {
+		font-size: 2.3em;
+	}
+	.w3layouts-main2 input[type="submit"] {
+		margin: 28px auto 31px;
+	}
+	.social a {
+		padding: 1em 4em;
+	}
+	.footer-w3l p {
+		font-size: 14px;
+		letter-spacing: 1px;
+	}
+	.w3layouts-main h2 {
+		margin-bottom: 25px;
+	}
+}
+@media(max-width: 667px){
+	.w3layouts-main {
+		width: 58%;
+	}
+	h1.logo-w3 {
+		font-size: 2em;
+		letter-spacing: 1px;
+	}
+	.w3layouts-main h2, .w3layouts-main2 h3 {
+		font-size: 23px;
+	}
+	input[type="text"], input[type="email"], input[type="password"] {
+		width: 74%;
+	}
+}
+@media(max-width: 640px){
+	.social a {
+		padding: 1em 3.5em;
+	}
+	input[type="submit"] {
+		padding: 12px 30px;
+	}
+}
+@media(max-width: 600px){
+	.w3layouts-main {
+		width: 62%;
+	}
+	input[type="text"], input[type="email"], input[type="password"] {
+		width: 72%;
+	}
+}
+@media(max-width: 568px){
+	.w3layouts-main {
+		width: 65%;
+	}
+	.footer-w3l p {
+		line-height: 26px;
+	}
+}
+@media(max-width: 480px){
+	h1.logo-w3 {
+		font-size: 1.8em;
+	}
+	.w3layouts-main h2, .w3layouts-main2 h3 {
+		font-size: 20px;
+		letter-spacing: 1px;
+	}
+	input[type="submit"] {
+		font-size: 0.95em;
+	}
+	.w3layouts-main {
+		width: 80%;
+	}
+}
+@media(max-width: 414px){
+	h1.logo-w3 {
+		font-size: 1.75em;
+		line-height: 1.4;
+	}
+	.w3layouts-main {
+		width: 80%;
+	}
+	.w3layouts-main {
+		padding: 40px 30px;
+	}
+	input[type="text"], input[type="email"], input[type="password"] {
+		width: 66%;
+	}
+	.w3layouts-main h6 {
+		font-size: 15px;
+	}
+	ul.top-links li a i.fa {
+		height: 32px;
+		line-height: 34px;
+		width: 32px;
+		font-size: 14px;
+	}
+	input[type="submit"] {
+		font-size: 0.85em;
+		letter-spacing: 0px;
+	}
+	.footer-w3l p {
+		font-size: 14px;
+	}
+	input[type="text"], input[type="email"], input[type="password"] {
+		letter-spacing: 0px;
+	}
+	.social a {
+		padding: 1em 2em;
+	}
+}
+@media(max-width: 384px){
+	.w3layouts-main {
+		padding: 30px 20px;
+		width: 88%;
+	}
+}
+@media(max-width: 375px){
+	h1.logo-w3 {
+		font-size: 1.7em;
+	}
+	.social a {
+		font-size: 14px;
+	}
+}
+@media(max-width: 320px){
+	h1.logo-w3 {
+		font-size: 1.55em;
+	}
+	.w3layouts-main h2, .w3layouts-main2 h3 {
+		font-size: 19px;
+		letter-spacing: 0px;
+	}
+	.w3layouts-main {
+		width: 90%;
+		padding: 25px 15px;
+	}
+	.w3layouts-main h6 {
+		font-size: 14px;
+		margin-top: 0px;
+	}
+	input[type="text"], input[type="email"], input[type="password"] {
+		width: 60%;
+	}
+	.footer-w3l p {
+		font-size: 13px;
+		margin: 2em 0em 1.5em;
+	}
+	.social a {
+		padding: 1em 2em;
+		font-size: 13px;
+		letter-spacing: 1px;
+	}
+	input[type="email"] ,input[type="password"] {
+		background-size: 28px;
+		padding: 14px 50px 14px 50px;
+		font-size: 14px;
+	}
+}
+/*--//responsive--*/
