Add Function Search And Fix Something

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -80,6 +80,7 @@
 
       &_item {
         @include flex(center, center);
+        cursor: pointer;
 
         @include table {
           margin-left: 10px;
