--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -16,3 +16,4 @@
 @import "./components/silde-banner";
 @import "./components/product-view-model";
 @import "./components/cart";
+@import "./components/contact";
