--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -17,3 +17,4 @@
 @import "./components/product-view-model";
 @import "./components/cart";
 @import "./components/post-filters-form";
+@import "./components/contact";
